added press start 2p font.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "pokemons": "^1.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "typeface-press-start-2p": "^0.0.72"
   },
   "scripts": {
     "start": "react-scripts start",
